--- a/1번 문제.md
+++ b/1번 문제.md
@@ -1,1 +1,7 @@
-
+(1) 동시에 같은 DB Table row 를 업데이트 하는 상황을 방어하기 위해 어떻게 개발하실 건지 설명해주세요
+답변 : 
+(2) TCP 와 UDP 의 차이를 작성해주세요
+답변 : 
+TCP는 안전한 데이터를 보내기 위해 반드시 서버와 클라이언트가 1대1로 연결되어 다중 전송이 불가능하다. 그리고 중간에 데이터가 정상적으로 도착했는지 등의 정보를 알 수 있어 제어가 가능하다. 논리적 연결이 설정되어 전송되는 순서가 보장되는 패킷 교환 방식인 '가상회선'을 사용한다. 예를 들어, 이메일, 파일 전송 등이 여기에 포함된다.
+UDP는 빠르게 데이터를 보내기 위해 일방적으로 데이터를 전송한다. 그러므로 비연결형 서비스이고, 1:N, N:N까지 전송이 가능하다. UDP는 서버와 클라이언트가 연결되어있지 않아 데이터를 보내기만 하면 되기 때문에 데이터가 잘 도착했는지 알 수 없어 제어가 불가능하다. UDP는 논리적 연결이 설정되지 않고, 독립적으로 전송되는 패킷 교환 방식인 '데이터 그램'을 사용한다. 예를 들어, 인터넷, 온라인 게임, 스트리밍이 여기에 포함된다.
+(3) 웹 브라우저에 네이버 를 검색하고 화면에 네이버 화면이 출력이 될 때 까지 내부적으로 어떤 동작들이 수행이 되는지 설명해주세요.
